--- a/src/components/Estatisticas/styles.css
+++ b/src/components/Estatisticas/styles.css
@@ -1,42 +1,14 @@
 .estatistica {
   flex: 1;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 45px;
-  color: #fff;
 }
 
-.topicos {
-height: 415px;
-width: 750px;
-padding: 25px;
-align-items: right;
-background: #ffffff;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 10px;
-border: none;
-outline: none;
-color: #008037;
-font-size: 22px;
+
+.div-iframe {
+display: flex;
+flex: 1;
 }
 
-.topicos .lista-topicos {
-    padding: 25px;
-    text-align: justify;
-}
-
-.topicos .lista-topicos li:not(:first-child){
-    margin-top: 10px
-}
-
-.conteinermapa {
-  display: flex;
-}
-
-.conteinermapa img {
-  height: 390px;
-}
-.conteinermapa .fonte {
-  text-align: center;
+.div-iframe iframe {
+  flex: 1;
 }
