--- a/src/components/QuemSomos/styles.css
+++ b/src/components/QuemSomos/styles.css
@@ -1,15 +1,12 @@
 .quemsomos {
-  margin: 35px;
   display: flex;
+  flex: 1;
 }
 
 .quadro {
   width: 800px;
-  background: #ffffff;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  color: #008037;
-  font-size: 22px;
+  color: #095d40;
+  font-size: 23px;
 }
 
 .texto {
@@ -18,11 +15,12 @@
 }
 
 .texto p:not(:first-child) {
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
-.conteinerimagem { 
-    display: flex;
+.conteinerimagem {
+  display: flex;
   flex: 1;
   justify-content: center;
 }
+
