--- a/src/components/Botao/styles.css
+++ b/src/components/Botao/styles.css
@@ -1,5 +1,5 @@
 .botao {
-    background-color: #095D40; 
+    background-color: #095d40;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     border: none;
