--- a/src/components/BarraNavegação/styles.css
+++ b/src/components/BarraNavegação/styles.css
@@ -1,35 +1,36 @@
 .barranavegacao {
-    width: 100%;
-    background: #00ac30;
-    display: flex;
-    padding: 20px;
-    align-items: center;
+  width: 100%;
+  background: #00ac30;
+  display: flex;
+  padding: px;
+  align-items: center;
 }
 
 .logo {
-    width: 60px;
-    margin-right: 7px;
+  width: 60px;
+  margin-right: 7px;
 }
 
 .conteinerlogo {
-    font-size: 15px;
-    color: #ffff;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  font-size: 15px;
+  color: #ffff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 20px;
 }
 
-.conteinerlogo h1{
-    font-weight: 400;
+.conteinerlogo h1 {
+  font-weight: 400;
 }
 
 .conteinerbotoes {
-    flex: 1;
-    display: flex;
-    justify-content: center;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  margin: 10px;
 }
 
 .conteinerbotoes button {
-    margin-right: 30px;
+  margin-right: 30px;
 }
-
